# Image-stitch

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
image_stitch/: __init__.py  __main__.py  cli.py  gui.py
image_stitch/core/: __init__.py  cropper.py  exporter.py  frame_sync.py  image_loader.py  stitcher.py
image_stitch/gui/: __init__.py  crop_dialog.py  main_window.py  stitch_dialog.py  theme.py
image_stitch/utils/: __init__.py  math_utils.py
tests/: conftest.py  test_cropper.py  test_exporter.py  test_frame_sync.py  test_image_loader.py  test_main.py  test_math_utils.py  test_stitcher.py
